  --------------------------  HepMC-2.01.06  --------------------------

2007-08-07  Lynn Garren

	* HepMC/GenEvent.h, GenVertex.h,GenParticle.h : add swap method
	* src/GenEvent.cc, GenVertex.cc, GenParticle.cc: 
	  use best practices for assignment and copy constructor

	* HepMC/SimpleVector.h: add swap method
	* HepMC/Flow.h: add swap method
	* HepMC/WeightContainer.h: add swap method

	* HepMC/Polarization.h: add swap method
	  add private valid_theta and valid_phi methods for use by constructors
	  src/Polarization.cc: use best practices for assignment and copy constructor

  --------------------------  HepMC-2.01.05  --------------------------

2007-07-19  Lynn Garren

	* HepMC/HeavyIon.h: make it nice for rootcint

  --------------------------  HepMC-2.01.04  --------------------------

2007-07-18  Lynn Garren

	* various bug fixes and protections

  --------------------------  HepMC-2.01.03  --------------------------

2007-07-11  Lynn Garren

	* src/IO*.cc: write HepMC version number

  --------------------------  HepMC-2.01.02  --------------------------

2007-07-10  Lynn Garren

	* HepMC/Version.h: add the ability to print the HepMC version number
	* src/IO_ExtendedAscii.cc: write HepMC version number

2007-07-09  Lynn Garren

	* src/IO_ExtendedAscii.cc: read/write beam particle information
	  fix a problem with reading optional info
	* test/testMass.*: compare generated and calculated masses

2007-06-29  Lynn Garren

	* HepMC/GenEvent.h, src/GenEvent.cc: define beam process methods
	   bool valid_beam_particles() const;
	   std::pair<GenParticle*,GenParticle*> beam_particles() const;
	   bool set_beam_particles(GenParticle*, GenParticle*);
	   bool set_beam_particles(std::pair<GenParticle*,GenParticle*> const &);

	* fio/IO_HEPEVT.cc, fio/IO_HERWIG.cc: set incoming beam particles

	* HepMC/PythiaWrapper*: remove old process struct

2007-06-21  Lynn Garren

	* HepMC/GenEvent.h: add methods to set and access the number of 