@@ -89,12 +89,12 @@ namespace HepMC {
 
 	/// returns all connected particles which have "code" in any  of the 
 	///  num_indices beginning with index code_index.
-	std::set<GenParticle*,GenParticleComparison> connected_partners( int code, int code_index =1,
+	std::set<HepMC::GenParticle*,HepMC::GenParticleComparison> connected_partners( int code, int code_index =1,
 						   int num_indices = 2 ) const;
 	/// same as connected_partners, but returns only those particles which
 	///  are connected to <=1 other particles (i.e. the flow line "dangles"
 	///  at these particles)
-	std::set<GenParticle*,GenParticleComparison> dangling_connected_partners( int code, 
+	std::set<HepMC::GenParticle*,HepMC::GenParticleComparison> dangling_connected_partners( int code, 
 			       int code_index = 1, int num_indices = 2 ) const;
 
 	////////////////////
@@ -138,14 +138,14 @@ namespace HepMC {
 
     protected: // intended for internal use only
         /// for internal use only
-	void            connected_partners( std::set<GenParticle*,GenParticleComparison>* output, 
+	void            connected_partners( std::set<HepMC::GenParticle*,HepMC::GenParticleComparison>* output, 
 					    int code,
 					    int code_index,
 					    int num_indices ) const;
         /// for internal use only
-	void            dangling_connected_partners( std::set<GenParticle*,GenParticleComparison>* 
+	void            dangling_connected_partners( std::set<HepMC::GenParticle*,HepMC::GenParticleComparison>* 
 						     output, 
-						     std::set<GenParticle*,GenParticleComparison>*
+						     std::set<HepMC::GenParticle*,HepMC::GenParticleComparison>*
 						     visited_particles, 
 						     int code, int code_index, 
 						     int num_indices ) const; 
